--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,1 +1,187 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  opacity: 1;
+}
+
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  opacity: 1;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+body {
+  width: 100%;
+  background-color: #f0f0f0;
+}
+
+.controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 60vh;
+  font-size: 20px;
+  margin-bottom: 1em;
+}
+
+.controls h1 {
+  position: absolute;
+  font-size: 14ch;
+  font-family: Arial, "Roboto", Arial, Courier;
+}
+
+.add {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin: 1em 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 1px black solid;
+  border-radius: 2px;
+}
+
+.add input {
+  background-color: #385c75;
+  border: 1px solid #000;
+  padding: 8px 10px;
+  color: #fff;
+  font-family: "Roboto", Arial, Courier;
+}
+
+.subtract {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 1em 2em;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  border: 1px black solid;
+  border-radius: 2px;
+}
+
+.subtract input {
+  border: 1px solid #000;
+  padding: 8px 10px;
+  background-color: #ff5f57;
+  color: #000;
+  font-family: "Roboto", Arial, Courier;
+}
+
+.subtract input:active {
+  outline: none;
+}
+
+.btnAdd {
+  padding: 8px 10px;
+  background-color: #99b4cc;
+  border: 1px solid #000;
+  cursor: pointer;
+}
+
+.btnSubtract {
+  border: 1px solid #000;
+  cursor: pointer;
+  padding: 8px 10px;
+  background-color: #ff9e99;
+}
+
+.results {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #99b4cc;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+hr {
+  margin: 0;
+}
+
+.total {
+  background-color: #385c75;
+  padding: 0.5em;
+  height: 10vh;
+  width: 37.5vw;
+  margin: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 25px;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.total h2 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-right: 10px;
+  font-size: 5ch;
+  letter-spacing: 2px;
+}
+
+.total span {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  color: #f0f0f0;
+  font-size: 5ch;
+}
+
+.allinputs {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 40vw;
+  background-color: black;
+  border: 5px solid #000;
+  height: auto;
+}
+
+.allinputs p {
+  text-align: center;
+  padding: 1em;
+  margin: 0;
+}
+
+.bgRed {
+  background-color: #ff5f57;
+}
+
+.bgBlue {
+  background-color: #385c75;
+}
+/*# sourceMappingURL=style.css.map */
