Added mobile styles

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -34,7 +34,25 @@ input[type="number"] {
 
 body {
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: #99b4cc;
+}
+
+aside {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 18%;
+  background-color: #fff;
+  height: auto;
+}
+
+aside li {
+  padding: 1em;
+  font-size: 3ch;
+}
+
+aside h1 {
+  padding: 1em;
 }
 
 .controls {
@@ -44,15 +62,17 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 60vh;
+  height: 40vh;
   font-size: 20px;
   margin-bottom: 1em;
+  background-color: #c0c0c0;
 }
 
 .controls h1 {
   position: absolute;
   font-size: 14ch;
   font-family: Arial, "Roboto", Arial, Courier;
+  margin-top: 0.5ch;
 }
 
 .add {
@@ -115,6 +135,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  color: #fff;
   background-color: #99b4cc;
   height: 100%;
   -webkit-box-orient: vertical;
@@ -171,18 +192,122 @@ hr {
   height: auto;
 }
 
-.allinputs p {
-  text-align: center;
+.allinputs div {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.allinputs div button {
+  border: none;
+  position: absolute;
   padding: 1em;
-  margin: 0;
-  color: #c0c0c0;
+  right: 0;
+}
+
+.allinputs div p {
+  margin: 1px;
+  padding: 1em;
+  width: auto;
 }
 
 .bgRed {
   background-color: #ff5f57;
+  color: #000;
 }
 
 .bgBlue {
   background-color: #385c75;
+  color: #fff;
+}
+
+@media (max-width: 640px) {
+  aside {
+    display: none;
+  }
+  html {
+    border: none;
+    max-width: 100%;
+    font-size: 10px;
+  }
+  .controls {
+    width: 100vw;
+  }
+  .controls h1 {
+    font-size: 5ch;
+  }
+  .controls div {
+    margin: 1em;
+    width: 34vw;
+    border: none;
+  }
+  .controls div input {
+    width: 100%;
+  }
+  .results {
+    width: 100vw;
+    font-size: 18px;
+  }
+  .results .total {
+    width: 100vw;
+    font-size: 10px;
+  }
+  .allinputs {
+    width: 100vw;
+  }
+  .allinputs div {
+    width: 100%;
+  }
+  .allinputs div p {
+    width: 40vw;
+  }
+}
+
+@media (min-width: 700px) and (max-width: 900px) {
+  aside {
+    display: none;
+  }
+  html {
+    border: none;
+    max-width: 100%;
+    font-size: 10px;
+  }
+  .controls {
+    width: 100vw;
+    height: 30vh;
+  }
+  .controls h1 {
+    font-size: 10ch;
+  }
+  .controls div {
+    margin: 1em;
+    width: 34vw;
+    border: none;
+  }
+  .controls div input {
+    width: 100%;
+  }
+  .results {
+    width: 100vw;
+    font-size: 18px;
+  }
+  .results .total {
+    width: 100vw;
+    font-size: 10px;
+  }
+  .allinputs {
+    width: 100vw;
+  }
+  .allinputs div {
+    width: 100%;
+  }
+  .allinputs div p {
+    width: 40vw;
+  }
 }
 /*# sourceMappingURL=style.css.map */
