Added link to portfolio

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -2,6 +2,7 @@
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *,
@@ -73,6 +74,12 @@ aside h1 {
   font-size: 14ch;
   font-family: Arial, "Roboto", Arial, Courier;
   margin-top: 0.5ch;
+}
+
+.controls #portfolio {
+  color: #000;
+  text-decoration: none;
+  position: absolute;
 }
 
 .add {
@@ -234,6 +241,9 @@ hr {
     border: none;
     max-width: 100%;
     font-size: 10px;
+  }
+  #portfolio {
+    margin-top: 5em;
   }
   .controls {
     width: 100vw;
